Changes: * Added option to turn off input box tooltips * Changed avatars in About section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -57,9 +57,15 @@
             <div class="content" id="settings__content">
                 <label id= "settings__update-checkbox-text" for="settings__update-checkbox">Always update automatically</label>
                 <div class="update ui toggle checkbox">
-                    <input type="checkbox" id="settings__update-checkbox" name="settings__update-checkbox" />
+                    <input type="checkbox" id="settings__update-checkbox" name="settings__update-checkbox"/>
                     <label for="settings__update-checkbox"></label>
                 </div>
+                <label id= "settings__input-tooltips-checkbox-text" for="settings__input-tooltips-checkbox">Show tips on hovering over inputs</label>
+                <div class="update ui toggle checkbox input-tooltips">
+                    <input type="checkbox" id="settings__input-tooltips-checkbox" name="settings__input-tooltips-checkbox"/>
+                    <label for="settings__input-tooltips-checkbox"></label>
+                </div>
+
                 <p id="settings__target-text">Target points</p>
                 <div class="ui target slider" id="settings__target-slider"></div>
                 <p id="settings__target-slider-text">-</p>
@@ -160,7 +166,7 @@
 
                     <div class="ui small message question">
                         <div class="about-avatar-container">
-                            <img src="../assets/burger.png" class="about-avatar">
+                            <img src="../assets/kitty.png" class="about-avatar" style="margin-top: -15px;">
                         </div>
                         <div class="question-content">
                             <div class="about-content-text">
@@ -171,7 +177,7 @@
                     </div>
                     <div class="ui small message reply">
                         <div class="about-avatar-container">
-                            <img src="../assets/burger.png" class="about-avatar">
+                            <img src="../assets/egg2.png" class="about-avatar" style="height: 40px; width: 40px; margin: -3px auto auto 10px">
                         </div>
                         <div class="reply-content">
                             <div class="about-content-text">
@@ -183,7 +189,7 @@
 
                     <div class="ui small message question">
                         <div class="about-avatar-container">
-                            <img src="../assets/burger.png" class="about-avatar">
+                            <img src="../assets/cat4.png" class="about-avatar" style="margin-top: -35px; opacity: 0.8">
                         </div>
                         <div class="question-content">
                             <div class="about-content-text">
@@ -196,7 +202,7 @@
                     </div>
                     <div class="ui small message reply">
                         <div class="about-avatar-container">
-                            <img src="../assets/burger.png" class="about-avatar">
+                            <img src="../assets/rabbit2.png" class="about-avatar" style="height: 40px; width: 40px; margin: 5px auto auto 10px;">
                         </div>
                         <div class="reply-content">
                             <div class="about-content-text">
@@ -211,7 +217,7 @@
 
                     <div class="ui small message question">
                         <div class="about-avatar-container">
-                            <img src="../assets/burger.png" class="about-avatar">
+                            <img src="../assets/parrot.png" class="about-avatar">
                         </div>
                         <div class="question-content">
                             <div class="about-content-text">
@@ -225,7 +231,7 @@
                     </div>
                     <div class="ui small message reply">
                         <div class="about-avatar-container">
-                            <img src="../assets/burger.png" class="about-avatar">
+                            <img src="../assets/egg2.png" class="about-avatar" style="height: 40px; width: 40px; margin: 20px auto auto 10px;">
                         </div>
                         <div class="reply-content">
                             <div class="about-content-text">
@@ -239,7 +245,7 @@
                     </div>
                     <div class="ui small message reply">
                         <div class="about-avatar-container">
-                            <img src="../assets/burger.png" class="about-avatar">
+                            <img src="../assets/rabbit2.png" class="about-avatar" style="height: 40px; width: 40px; margin: 5px auto auto 10px;">
                         </div>
                         <div class="reply-content">
                             <div class="about-content-text">
@@ -254,7 +260,7 @@
 
                     <div class="ui small message question">
                         <div class="about-avatar-container">
-                            <img src="../assets/burger.png" class="about-avatar">
+                            <img src="../assets/dog2.png" class="about-avatar" style="margin-top: -10px; transform: rotate(30deg);">
                         </div>
                         <div class="question-content">
                             <div class="about-content-text">
@@ -267,13 +273,13 @@
                     </div>
                     <div class="ui small message reply">
                         <div class="about-avatar-container">
-                            <img src="../assets/burger.png" class="about-avatar">
+                            <img src="../assets/egg2.png" class="about-avatar" style="height: 40px; width: 40px; margin: 25px auto auto 10px;">
                         </div>
                         <div class="reply-content">
                             <div class="about-content-text">
                                 Task is specifically what you did,<br>
-                                Activity is: If you did two similar tasks, how would you <u>group them
-                                    together</u>?
+                                Activity is: If you did two similar tasks, how would you group them
+                                    together?
                                 <br> 
                                 Skills are what it makes you better at.
                                 <br> <i style="font-size: 11px;">Tip: Hover over inputs on the main screen for examples!</i>
@@ -285,7 +291,7 @@
                     </div>
                     <div class="ui small message reply">
                         <div class="about-avatar-container">
-                            <img src="../assets/burger.png" class="about-avatar">
+                            <img src="../assets/rabbit2.png" class="about-avatar" style="height: 40px; width: 40px; margin: 20px auto auto 10px;">
                         </div>
                         <div class="reply-content">
                             <div class="about-content-text">
@@ -298,9 +304,9 @@
                         </div>
                     </div>
 
-                    <div class="ui small message question">
+                    <div class="ui small message question" style="margin-right: 80px;">
                         <div class="about-avatar-container">
-                            <img src="../assets/burger.png" class="about-avatar">
+                            <img src="../assets/trumpet.png" class="about-avatar" style="height: 60px; width: 60px;">
                         </div>
                         <div class="question-content">
                             <div class="about-content-text">
@@ -315,7 +321,7 @@
                     </div>
                     <div class="ui small message reply">
                         <div class="about-avatar-container">
-                            <img src="../assets/burger.png" class="about-avatar">
+                            <img src="../assets/egg3.png" class="about-avatar" style="height: 40px; width: 40px;">
                         </div>
                         <div class="reply-content">
                             <div class="about-content-text">
@@ -328,7 +334,7 @@
                     </div>
                 </div>
             </div>
-            <div class="header" style="text-align: center; font-size: smaller; opacity: 0.6;">catalancabbage@zoho.com</div> 
+            <div class="header" style="text-align: center; font-size: smaller; opacity: 0.6;"><a href="mailto:catalancabbage@zoho.com?subject=TheWall%20Feedback" style="color: black; text-decoration: underline;">catalancabbage@zoho.com</a></div> 
         </div>
         <div id="main-panels" class="ui cards">
             <!--Added via JS-->
